# apps/estimate-room-api/docs/swagger.json
@@ -997,6 +997,14 @@
                     "type": "string",
                     "maxLength": 255
                 },
+                "occupation": {
+                    "type": "string",
+                    "maxLength": 120
+                },
+                "organization": {
+                    "type": "string",
+                    "maxLength": 120
+                },
                 "password": {
                     "type": "string",
                     "maxLength": 128,
@@ -1065,6 +1073,12 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "occupation": {
+                    "type": "string"
+                },
+                "organization": {
                     "type": "string"
                 }
             }
