# apps/estimate-room-ui/src/shared/types/models/user.ts
@@ -3,4 +3,6 @@ export interface AuthUser {
   readonly displayName: string;
   readonly email: string;
   readonly id: string;
+  readonly occupation: string | null;
+  readonly organization: string | null;
 }
